Set JVM arg: --enable-preview