@@ -46,3 +46,11 @@ dependencies {
 tasks.getByName<Test>("test") {
     useJUnitPlatform()
 }
+
+tasks.withType<JavaCompile>().all {
+    options.compilerArgs = listOf("--enable-preview")
+}
+
+tasks.withType<Test>().all {
+    jvmArgs("--enable-preview")
+}
